--- a/bank-app-frontend/Components/Layout/NavMenu.razor
+++ b/bank-app-frontend/Components/Layout/NavMenu.razor
@@ -16,11 +16,7 @@
 
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="Dashboard" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Dashboard
-            </NavLink>
-        </div>
+
 
         @if(applicantDetails!= null || tellerDetails!=null)
         {
@@ -43,6 +39,12 @@
         }
         else
         {
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="Dashboard">
+                    <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Dashboard
+                </NavLink>
+            </div>
+
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="customer/detail">
                     <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Detail
