--- a/bank-app-frontend/Components/Pages/CustomerRegisteration.razor
+++ b/bank-app-frontend/Components/Pages/CustomerRegisteration.razor
@@ -40,20 +40,20 @@
                     <div class="form-group row m-2">
                         <label for="customerName" class="col col-sm-4 text-center col-form-label">Name:</label>
                         <div class="col col-sm-8">
-                            <label class="col-form-label">@applicant?.ApplicateName</label>
+                            <input type="text" class="form-control" placeholder="User Name" disabled value="@applicant?.ApplicateName">
                         </div>
                     </div>
                     <div class="form-group row m-2">
                         <label for="customerCNIC" class="col col-sm-4 text-center col-form-label">CNIC:</label>
                         <div class="col col-sm-8">
-                            <label class="col-form-label">@applicant?.CNIC</label>
+                            <input type="text" class="form-control" placeholder="User CNIC" disabled value="@applicant?.CNIC">
                         </div>
                     </div>
 
                     <div class="form-group row m-2">
                         <label for="customerAddress" class="col col-sm-4 text-center col-form-label"> Address:</label>
                         <div class="col col-sm-8">
-                            <label class="col-form-label">@applicant?.Address</label>
+                            <input type="text" class="form-control" placeholder="User Address" disabled value="@applicant?.Address">
                         </div>
                     </div>
 
@@ -143,7 +143,7 @@
             Customer updatedCustomer = await customerService.UpdateCustomer(customer);
             if(updatedCustomer!=null)
             {
-                navigationManager.NavigateTo("Home"); 
+                navigationManager.NavigateTo("Login"); 
             }
         }
     }
