--- a/bank-app-frontend/Components/Pages/TransactionComponent.razor
+++ b/bank-app-frontend/Components/Pages/TransactionComponent.razor
@@ -4,7 +4,7 @@
 @inject ApplicantService applicantService;
 @rendermode InteractiveServer
 
-<h3>TransactionComponent</h3>
+<h3>Transaction</h3>
 @if (isTransactionInProgress)
     {
         <div class="d-flex justify-content-center">
@@ -14,7 +14,7 @@
         </div>
 }
 <div class="d-flex justify-content-center">
-    <div class= "m-4 shadow p-5 mb-5 bg-white rounded">
+    <div class= "col-xl-7 col-md-12 m-4 shadow p-5 mb-5 bg-white rounded">
         <form class="g-3" @onsubmit="submitData">
             <p class="text-center">Add transaction</p>
 
@@ -99,7 +99,6 @@
         {
             transaction.TransactionType = selectedType;
             showDepositorDiv = transaction.TransactionType.Equals(TransactionType.TRANSFER);
-            
         }
     }
 }
