--- a/bank-app-frontend/Components/Pages/Login.razor.css
+++ b/bank-app-frontend/Components/Pages/Login.razor.css
@@ -5,7 +5,13 @@ html, body {
     max-width:100%/* Ensure html and body take up full viewport height */
 }
 
-
+.container {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+    background: #776BCC; /* Change background color here */
+}
 
 
 .screen {
