--- a/bank-app-frontend/Components/_Imports.razor
+++ b/bank-app-frontend/Components/_Imports.razor
@@ -8,3 +8,4 @@
 @using Microsoft.JSInterop
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using BlazorBootstrap;
+@using Syncfusion.Blazor.SplitButtons;
