--- a/bank-app-frontend/Components/Pages/ApplicationForm.razor
+++ b/bank-app-frontend/Components/Pages/ApplicationForm.razor
@@ -1,17 +1,25 @@
-﻿@page "/"
-@layout ApplicationFormLayout
-@using Models
-@using Services
-@using bank_app_frontend.Components.Layout
-@using MudBlazor
+﻿@page "/";
+@layout ApplicationFormLayout;
+@using Models;
+@using Services;
+@using bank_app_frontend.Components.Layout;
+@using MudBlazor;
 @inject ApplicantService applicantService;
-@inject NavigationManager NavigationManager
-@rendermode InteractiveServer
+@inject NavigationManager NavigationManager;
+@inject ToastMessageService toastMessageService;
 
 <div class="container">
     <div class="text">
         Application Form
     </div>
+    @if (showLoading)
+    {
+        <div class="d-flex justify-content-center">
+            <div class="spinner-border" style="width: 3rem; height: 3rem;" role="status">
+                <span class="sr-only"></span>
+            </div>
+        </div>
+    }
     <form @onsubmit="SubmitForm">
         <div class="form-row">
             <div class="input-data">
@@ -41,21 +49,21 @@
         <div class="form-row">
             <div class="input-data">
                 <label class="data" for="">Date Of Birth</label>
-                <InputDate  @bind-Value="@applicant.DOB" />
+                <DateInput TValue="DateOnly"
+                           @bind-Value="@applicant.DOB"
+                           Placeholder="Enter Date" />
             </div>
             <div class="input-data">
                 <label class="data" for="">Account Type</label>
-                <InputSelect TValue="AccountType" @bind-Value="applicant.AccountType">
-                    @foreach (AccountType type in Enum.GetValues(typeof(AccountType)))
-                    {
-                        <option value="@type">@type</option>
-                    }
-                </InputSelect>
+                <select id="inputState" class="form-select" @bind="applicant.AccountType">
+                    <option value="@AccountType.CURRENT" selected>Current</option>
+                    <option value="@AccountType.SAVING">Saving</option>
+                    <option value="@AccountType.BUSINESS">Business</option>
+                </select>
             </div>
         </div>
-    
-       
- 
+
+
         <div class="form-row">
             <div class="input-data textarea">
                 <div class="form-row submit-btn">
@@ -71,37 +79,25 @@
 
 @code
 {
-    Applicant applicant = new Applicant();
-    DateTime? selectedDate;
-
-    String DOB;
-
-    private void SubmitForm()
+    Applicant applicant;
+    bool showLoading;
+    protected override void OnInitialized()
     {
-        int accountType;
-        if (applicant.AccountType == AccountType.CURRENT)
-        {
-            accountType = 0;
-        }
-        else if (applicant.AccountType == AccountType.SAVING)
-        {
-            accountType = 1;
-        }
-        else
-        {
-            accountType = 2;
-        }
-        UpdateApplicantList(applicant.ApplicateName, applicant.Address, applicant.CNIC, applicant.DOB, applicant.EmailAddress, accountType);
-        // Form submission logic
-
-        // Redirect to the desired page
-        NavigationManager.NavigateTo("Home"); // Change "/submitted" to the desired route
-
+        applicant = new Applicant();
+        applicant.DOB = DateOnly.FromDateTime(DateTime.Now);
+        showLoading = false;
     }
 
-    public async Task UpdateApplicantList(string ApplicateName, string Address, string CNIC, DateOnly DOB, string Email, int AccountType)
+    private async Task SubmitForm()
     {
-        await applicantService.UpdateApplicantList(ApplicateName, Address, CNIC, DOB, Email, AccountType);
-
+        showLoading = true;
+        Applicant applicantResponse = await applicantService.UpdateApplicantList(applicant);
+        showLoading = false;
+        if (applicantResponse != null)
+        {
+            toastMessageService.ShowToastMessage(ToastType.Success, "Success!!", "Your request is forwarded to bank official for approval");
+            await Task.Delay(5000);
+            NavigationManager.NavigateTo("Login"); // Change "/submitted" to the desired route
+        }
     }
 }
